--- a/docs/explore/redisinsightv2/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsightv2/profiler/index-profiler.mdx
@@ -14,7 +14,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-![alt_text](images/profiler_1.png "image_tooltip")
+![alt_text](images/profiler_1.png)
 
 
 Last week [the maintenance release of RedisInsight Preview 2.0](https://docs.redis.com/latest/ri/release-notes/v2.0.2/) (v2.0.4) was introduced by the RedisInsight Team. RedisInsight v2.0 is a complete product rewrite based on a new tech stack composed of [Electron](https://www.electronjs.org/), [Elastic UI](https://elastic.github.io/eui/#/), [Monaco Editor](https://microsoft.github.io/monaco-editor/), and [Node](https://nodejs.org/).js. This newer preview build added a dedicated RedisInsight Profiler UI for the first time. The profiler uses the MONITOR command to analyze every command sent to the Redis instance in real time. 
@@ -31,7 +31,7 @@ Follow the below instructions to test drive RedisInsight Profiler tool introduce
 
 
 
-![alt_text](images/profiler_2.png "image_tooltip")
+![alt_text](images/profiler_2.png)
 
 
 Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.com/create/rediscloud) and create a Redis database. [Follow these steps to enable RedisTimeSeries module ](https://developer.redis.com/howtos/redistimeseries)on Redis Enterprise Cloud.
@@ -43,7 +43,7 @@ Click “Create Database”.  Enter database name and select RedisTimeSeries Mod
 
 
 
-![alt_text](images/profiler_3.png "image_tooltip")
+![alt_text](images/profiler_3.png)
 
 
 Once the database is created, you will see the endpoint URL that gets generated. Save it for future reference.
@@ -52,7 +52,7 @@ Once the database is created, you will see the endpoint URL that gets generated.
 
 
 
-![alt_text](images/profiler_4.png "image_tooltip")
+![alt_text](images/profiler_4.png)
 
 
 
@@ -66,7 +66,7 @@ To install RedisInsight on your local system, you need to first download the sof
 
 
 
-![alt_text](images/profiler_5.png "image_tooltip")
+![alt_text](images/profiler_5.png)
 
 
 Execute the installer. Once it is installed on your computer, click on the RedisInsight icon to open the tool. 
@@ -75,20 +75,20 @@ Execute the installer. Once it is installed on your computer, click on the Redis
 
 
 
-![alt_text](images/profiler_6.png "image_tooltip")
+![alt_text](images/profiler_6.png)
 
 
 ### Step 4. Connect to Redis Enterprise Cloud Database
 
 
 
-![alt_text](images/profiler_7.png "image_tooltip")
+![alt_text](images/profiler_7.png)
 
 
 
 
 
-![alt_text](images/profiler_8.png "image_tooltip")
+![alt_text](images/profiler_8.png)
 
 
 As the database is empty, you won’t be able to see any key.
@@ -96,7 +96,7 @@ As the database is empty, you won’t be able to see any key.
 
 
 
-![alt_text](images/profiler_9.png "image_tooltip")
+![alt_text](images/profiler_9.png)
 
 
 ### Step 5. Execute the script
@@ -261,7 +261,7 @@ Open Browser tool and select TS from the drop-down menu as shown below:
 
 
 
-![alt_text](images/profiler_10.png "image_tooltip")
+![alt_text](images/profiler_10.png)
 
 
 It will display temperature as a key. Choose the “Profiler” option and click on “Start Profiler.”
@@ -271,7 +271,7 @@ It will display temperature as a key. Choose the “Profiler” option and click
 
 
 
-![alt_text](images/profiler_11.png "image_tooltip")
+![alt_text](images/profiler_11.png)
 
 
 Soon you will be able to see the detailed information about the number of commands processed, commands/second, and number of connected clients. It also gives information about top prefixes, top keys, and top commands.
@@ -280,7 +280,7 @@ Soon you will be able to see the detailed information about the number of comman
 
 
 
-![alt_text](images/profiler_12.png "image_tooltip")
+![alt_text](images/profiler_12.png)
 
 
 ### References:
