initial ru301 section additions, stubs and profiles

--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -40,7 +40,13 @@ The following links demonstrate various ways to provision Redis and accelerate a
         page="/operate/provisioning"
         />
   </div>
-
+ <div class="col scale">
+     <RedisCard
+        title="Running Redis at Scale"
+        description="Create a performant, stable, and secure deployment of Redis"
+        page="/operate/redis-at-scale"
+        />
+  </div>
  <div class="col orchestration">
         <RedisCard
             title="Orchestration"
