--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -8,7 +8,7 @@ slug: /create
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-The following quick starts shows various ways of how to get started and create new Redis database:
+The following quick starts shows various ways of how to get started and create a new Redis database:
 
 
 
