--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-create
-title: Create Redis Database - Quick Starts 
+title: Create a Redis Database - Quick Starts 
 sidebar_label: Overview - All Quick Starts 
 slug: /create
 ---
