--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -157,7 +157,7 @@ There are two ways to install Redis on Mac OS:
 - Using Homebrew
 
 Homebrew is the easiest and most flexible way to install Redis on MacOS. It is a package management software for MacOS.
-It automates Redis installation process, making it quick and easy to add Redis to your system. 
+It automates the Redis installation process, making it quick and easy to add Redis to your system. 
 
 Follow the below steps to install Redis on Mac OS using brew service:
 
