--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -248,7 +248,7 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
  ```
 
 
-### Next Step
+### Next Steps
 
 
 - [Connect to Redis database using RedisInsight](/explore/redisinsight)
