--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -190,7 +190,7 @@ Run the below command line to start the Redis database in the background:
   brew services start redis
  ```
 
-In order to run the latest version of Redis, you will need to compil Redis from the source.
+In order to run the latest version of Redis, you will need to compile Redis from the source.
 [Follow this link](/create/from-source/) to learn more about it.
 
 
