--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -184,7 +184,7 @@ Follow the below command line to install Redis using brew service:
 ### Step 3: Start Redis server
 
 
-Run the below command line to start the Redis database in the background:
+Run the following command to start the Redis database in the background:
 
  ```bash
   brew services start redis
