--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -173,7 +173,7 @@ Run the below command to install and start brew service:
 
 ### Step 2: Install Redis using Homebrew package manager
 
-Follow the below command line to install Redis using brew service:
+Use the following commands to install Redis using brew service:
  
  ```bash
   brew update
