--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -164,7 +164,7 @@ Follow the below steps to install Redis on Mac OS using brew service:
 
 ### Step 1: Install Homebrew
 
-Run the below command to install and start brew service:
+Run the following command to install and start brew service:
 
 
  ```bash
