--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -23,11 +23,11 @@ import RedisCard from '@site/src/theme/RedisCard';
   <TabItem value="redis-stack">
 
 
-To install Redis Stack on macOS, use Homebrew. Make sure that you have Homebrew installed before starting on the installation instructions below.
+To install Redis Stack on mac OS, use Homebrew. Make sure that you have Homebrew installed before starting on the installation instructions below.
 
 
 
-Follow the instructions below to setup Redis Stack on your Mac:
+Follow the instructions below to setup Redis Stack on your Mac OS:
 
 ### Step 1. Install Redis Stack using Homebrew
 
@@ -156,10 +156,10 @@ There are two ways to install Redis on Mac OS:
 - [Installing Redis from source](/create/from-source/)
 - Using Homebrew
 
-Homebrew is the easiest and most flexible way to install Redis on MacOS. It is a package management software for MacOS.
+Homebrew is the easiest and most flexible way to install Redis on Mac OS. It is a package management software for Mac OS.
 It automates the Redis installation process, making it quick and easy to add Redis to your system. 
 
-Follow the below steps to install Redis on Mac OS using brew service:
+Follow the below steps to install Redis on Mac OS using `brew service`:
 
 
 ### Step 1: Install Homebrew
@@ -215,7 +215,7 @@ It should return PONG. This command is often used to test if a connection is sti
  launchctl load ~/Library/LaunchAgents/homebrew.mxcl.redis.plist
 ```
 
-### Step 6: Run Redis service using a redis configuration file 
+### Step 6: Run Redis service using a Redis configuration file 
 
  ```bash
   redis-server /usr/local/etc/redis.conf
