--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-homebrew
-title: Create Redis database on Mac OS 
+title: Create a Redis database on Mac OS 
 sidebar_label: Redis on Mac OS
 slug: /create/homebrew/
 authors: [ajeet]
