--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -32,7 +32,7 @@ This article shows how to get started with the recommended libraries: [node-redi
 
 
 
-#### Step 1. Setup a Redis server
+#### Step 1. Run a Redis server
 
 You can either run Redis in a Docker container or directly on your Mac OS.
 Follow the below commands to setup a Redis server locally:
@@ -49,14 +49,14 @@ Redis Stack unifies and simplifies the developer experience of the leading Redis
 :::
 
 
-Ensure that you are able to use the following Redis commands to connect to the Redis instance.
+Ensure that you are able to use the following Redis command to connect to the Redis instance.
 
 ```bash
  redis-cli -h localhost -p 6379
  localhost>
 ```
 
-#### Step 1. Install node-redis using `npm` (or `yarn`)
+#### Step 2. Install node-redis using `npm` (or `yarn`)
 
 Run the following NPM command line to install Redis client.
 
