--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -28,8 +28,35 @@ In order to use Redis with PHP you will need a PHP Redis client. In the followin
   ]}>
   <TabItem value="Phpredis">
 
+Redis is an open source, in-memory, key-value data store most commonly used as a primary database, cache, message broker, and queue. Redis delivers sub-millisecond response times, enabling fast and powerful real-time applications in industries such as gaming, fintech, ad-tech, social media, healthcare, and IoT.
 
-### Step 1. Get pecl 
+
+#### Step 1. Run a Redis server
+
+You can either run Redis in a Docker container or directly on your Mac OS.
+Follow the below commands to setup a Redis server locally:
+
+
+```
+ brew tap redis-stack/redis-stack
+ brew install --cask redis-stack
+```
+
+:::info INFO
+Redis Stack unifies and simplifies the developer experience of the leading Redis modules and the capabilities they provide. Redis Stack bundles five Redis modules: RedisJSON, RedisSearch, RedisGraph, RedisTimeSeries, and RedisBloom.
+[Learn more](/create/redis-stack)
+:::
+
+
+Ensure that you are able to use the following Redis command to connect to the Redis instance.
+
+```bash
+ redis-cli -h localhost -p 6379
+ localhost>
+```
+
+
+### Step 2. Get pecl 
 
 
 ```
