--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -30,6 +30,8 @@ For your first steps with Python and Redis, this article will show how to use th
 
 #### Step 1. Run a Redis server
 
+Redis is an open source, in-memory, key-value data store most commonly used as a primary database, cache, message broker, and queue. Redis delivers sub-millisecond response times, enabling fast and powerful real-time applications in industries such as gaming, fintech, ad-tech, social media, healthcare, and IoT.
+
 You can either run Redis in a Docker container or directly on your Mac OS.
 Follow the below commands to setup a Redis server locally:
 
