--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -113,7 +113,7 @@ OK
 - [Getting Started with Redis & Php](https://github.com/redis-developer/redis-php-getting-started/)
 - [PHP extension for Redis based on Hiredis](https://github.com/nrk/phpiredis)
 - [Redis distributed locks in PHP](https://github.com/ronnylt/redlock-php)  
-
+- [Support for Redis Cluster ](https://github.com/phpredis/phpredis/blob/develop/cluster.markdown#redis-cluster)
 
 
   </TabItem>
